implementacao de lazy loading

--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -18,3 +18,5 @@
 
     <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">login</button>
 </form>
+
+<p>Not a user? <a [routerLink]="['signup']">Register Now!</a></p>
